# canary-firmware

./: Cargo.toml  PLAN.md  REQUIREMENTS.md  memory.x
.cargo/: config.toml
script/: flash.sh  log.sh
src/: debounce.rs  keypin.rs  main.rs  matrix.rs  stash.rs  sync.rs
